[package]
name = "lockfree-cuckoohash"
version = "0.1.0"
authors = ["Mingcong Han <hanmingcong123@hotmail.com>"]
edition = "2018"
description = "A rust implementation of lockfree cuckoo hashmap"
license = "MIT"
repository = "https://github.com/datenlord/lockfree-cuckoohash"
readme = "README.md"
keywords = ["lockfree", "non-blocking", "cuckoo", "hashmap", "hashtable"]
categories = ["data-structures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9.0"
clippy-utilities = "0.1.0"

[dev-dependencies]
rand = "0.8"
num_cpus = "1.13.0"
